# Project.Autotests.UralmashProgrammers

./: .gitignore  GigaChatAPI.py  Makefile  README.md  docxparser.py  index.html  main.py  output.txt  pdf2docx_converter.py  pyproject.toml  requirements.txt  test_fsd.docx
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
project/: GigaChatAPI.py  cert.pem  index.html  key.pem  main.py
project/static/: scripts.js
project/static/css/: style.css
static/: scripts.js
static/css/: style.css
