[project]
name = "project-autotests-uralmashprogrammers"
version = "0.1.0"
description = ""
authors = [
    {name = "aleksey",email = "alyosha.borodulin@ya.ru"}
]
#readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiohappyeyeballs (==2.4.3)",
    "aiohttp (==3.11.8)",
    "aiosignal (==1.3.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.6.2.post1)",
    "attrs (==24.2.0)",
    "beautifulsoup4 (==4.12.3)",
    "bs4 (==0.0.2)",
    "certifi (==2024.8.30)",
    "charset-normalizer (==3.4.0)",
    "click (==8.1.7)",
    "colorama (==0.4.6)",
    "dataclasses-json (==0.6.7)",
    "docx-parser-converter (==0.5.1.2)",
    "fastapi (==0.115.5)",
    "fire (==0.7.0)",
    "frozenlist (==1.5.0)",
    "gigachat (==0.1.36)",
    "gitdb (==4.0.11)",
    "gitpython (==3.1.43)",
    "greenlet (==3.1.1)",
    "gritql (==0.1.5)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.27.2)",
    "httpx-sse (==0.4.0)",
    "idna (==3.10)",
    "jsonpatch (==1.33)",
    "jsonpointer (==3.0.0)",
    "langchain (==0.3.9)",
    "langchain-cli (==0.0.33)",
    "langchain-community (==0.3.8)",
    "langchain-core (==0.3.21)",
    "langchain-gigachat (==0.3.1)",
    "langchain-text-splitters (==0.3.2)",
    "langserve (==0.3.0)",
    "langsmith (==0.1.147)",
    "lxml (==5.2.2)",
    "markdown-it-py (==3.0.0)",
    "marshmallow (==3.23.1)",
    "mdurl (==0.1.2)",
    "multidict (==6.1.0)",
    "mypy-extensions (==1.0.0)",
    "numpy (==1.26.4)",
    "opencv-python-headless (==4.10.0.84)",
    "orjson (==3.10.12)",
    "packaging (==24.2)",
    "pdf2docx (==0.5.8)",
    "propcache (==0.2.0)",
    "pydantic (==2.7.4)",
    "pydantic-settings (==2.6.1)",
    "pydantic-core (==2.18.4)",
    "pygments (==2.18.0)",
    "pymupdf (==1.25.1)",
    "python-docx (==1.1.2)",
    "python-dotenv (==1.0.1)",
    "python-multipart (==0.0.19)",
    "pyyaml (==6.0.2)",
    "regex (==2024.5.15)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "rich (==13.9.4)",
    "shellingham (==1.5.4)",
    "smmap (==5.0.1)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.6)",
    "sqlalchemy (==2.0.35)",
    "sse-starlette (==1.8.2)",
    "starlette (==0.41.3)",
    "tenacity (==9.0.0)",
    "termcolor (==2.5.0)",
    "tomlkit (==0.13.2)",
    "typer (==0.9.4)",
    "types-requests (==2.32.0.20241016)",
    "typing-inspect (==0.9.0)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.2.3)",
    "uvicorn (==0.32.1)",
    "yarl (==1.18.0)"
]

[tool.poetry]
packages = [{include = ""}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
